# JARVIS

./: .env.example  .gitignore  JARVIS_MASTER_SPEC.md  Makefile  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  ruff.toml
docs/: DECISIONS.md  HANDOVER.md  JOURNAL.md  MANUAL_SETUP.md  PROTOCOLE.md
extensions/jarvis-desktop@jarvis-suit.local/: README.md  extension.js  metadata.json
profiles/: deep-work.toml  default.toml
scripts/: demo_phase1.py  demo_phase3.py  demo_phase4.py  doctor.py  oauth_gmail.py  serve.ps1  wake.ps1
src/jarvis/: __init__.py  __main__.py  assembly.py  config.py  demo.py  doctor.py  logging.py  scheduler.py
src/jarvis/agents/: __init__.py  arachne.py  atlas.py  base.py  chiron.py  chronos.py  conversational.py  daedalus.py  echo.py  hermes.py  jarvis.py  nemesis.py  oracle.py  pheme.py  vulcan.py
src/jarvis/api/: __init__.py  app.py  schemas.py  (+8 more)
tests/: conftest.py  test_scheduler.py
tests/agents/: test_atlas.py  test_chronos.py  test_conversational.py  test_daedalus.py  test_echo.py  test_experts.py  test_hermes.py  test_oracle.py
tests/api/: test_routes.py  test_routes_chat.py  test_routes_projects.py  test_routes_todo.py  test_routes_voice.py  test_static_ui.py  test_ws.py
tests/chat/: test_store.py
tests/core/: test_budget.py  test_bus.py  test_journal_replay.py  test_orchestrator.py  test_permissions.py
tests/desktop/: test_gnome_wayland.py  test_mock_desktop.py
tests/inference/: test_gateway_mock.py  test_gateway_tier_model.py  test_ollama_backend.py
tests/io/: test_files.py  test_mail.py  test_voice.py  test_websearch.py
tests/mail/: test_store.py
tests/night/: test_manager.py  test_store.py
tests/profiles/: test_executor.py  test_loader.py
tests/todo/: test_store.py
ui/: .env.example  .eslintrc.cjs  README.md  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.app.tsbuildinfo  vite.config.ts
ui/src/: App.tsx  index.css  main.tsx
ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
ui/src-tauri/src/: main.rs
(+95 files in other folders)
