[project]
name = "jarvis-suit"
version = "0.1.0"
description = "JARVIS-style personal assistant — the 'Tony Stark' layer built on top of OpenJarvis"
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = { text = "Apache-2.0" }
authors = [{ name = "Quentin" }]
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.2",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "mypy>=1.10",
    "ruff>=0.5",
]
cloud = ["anthropic>=0.30"]
local = ["ollama>=0.3"]
openjarvis = ["openjarvis>=0.1"]
google = [
    "google-api-python-client>=2.100",
    "google-auth-oauthlib>=1.2",
    "google-auth-httplib2>=0.2",
]

[project.scripts]
jarvis-suit = "jarvis.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/jarvis"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q --import-mode=importlib"
filterwarnings = [
    "error::DeprecationWarning",
    # Avertissement tiers (starlette TestClient/httpx), hors de notre contrôle.
    "ignore:Using .httpx. with",
]
